# c-of-time

./: .gitignore  .gitmodules  CURRENTLY_WORKING_ON  LICENSE_MIT  Makefile  README.md  custom_ctc.asm  install_gcc.md  install_linux.md  install_macos.md  install_windows.md  linker.ld
.github/: dependabot.yml
.github/workflows/: dependabot-pmdsky-debug.yml  rust-check-cargo-cot.yml  rust-check-ffi.yml  rust-test.yml
include/: cot.h  cot_basedefs.h
include/cot/: basedefs.h  custom_instructions.h  effects.h  logging.h  menus.h  process_special.h  rust.h
patches/: internal.asm  internal.cotpatch  patch.asm  patch.cotpatch
rust/: Cargo.toml  README.md  armv5te-none-ndseoseabi-eu.json  armv5te-none-ndseoseabi-ja.json  armv5te-none-ndseoseabi-na.json  build.rs
rust/.cargo/: config.toml
rust/cargo-cot/: Cargo.toml  README.md
rust/cargo-cot/src/: main.rs
rust/eos-rs/: Cargo.toml  README.md  build-doc.sh  generate-bindings.sh  include.h
rust/eos-rs/patches-def/: Cargo.toml
rust/eos-rs/patches-def/src/: lib.rs
rust/eos-rs/proc/: Cargo.toml
rust/eos-rs/proc/src/: lib.rs
rust/eos-rs/src/: allocation.rs  ctypes.rs  ffi.rs  lib.rs  log_impl.rs  macros.rs  panic.rs  prelude.rs  string_util.rs  util.rs
rust/eos-rs/src/api/: _common.rs  _tmp.rs  abilities.rs  alias.rs  dungeon_mode.rs  dungeons.rs  enums.rs  fixed.rs  gameplay.rs  ground_mode.rs  io.rs  iq.rs  items.rs  juice_bar.rs  math.rs  messages.rs  mod.rs  monster.rs  monsters.rs  moves.rs  objects.rs  overlay.rs  pack_file.rs  personality_test.rs  random.rs  script_vars.rs  sir0.rs  sys.rs  top_menu.rs  types.rs  wte.rs
rust/eos-rs/src/api/dungeon_mode/: animations.rs  dungeon_struct.rs  effects.rs  entity.rs  enums.rs  fixed_room.rs  items.rs  menus.rs  message_log.rs  mod.rs  monster.rs  moves.rs  random.rs  sprites.rs  tile.rs  traps.rs
rust/eos-rs/src/api/dungeon_mode/dungeon_generator/: mod.rs
rust/eos-rs/src/api/dungeon_mode/dungeon_generator/game_builtin/: global_dungeon.rs  grid.rs  layout.rs  mod.rs
rust/eos-rs/src/api/dungeon_mode/dungeon_generator/reimplementation/: mod.rs
rust/src/: main.rs
scripts/: generate_linkerscript.py  patch.py
src/: custom_trampolines.s  ground_instructions.c  item_effects.c  main.c  menus.c  move_effects.c  special_processes.c
src/cot/: effects.c  instruction_hooks.c  menu_hooks.c  process_special.c  trampolines.s
symbols/: custom_EU.ld  custom_JP.ld  custom_NA.ld
