[package]
name         = "cargo-cot"
description  = "c-of-time extension for cargo"
version      = "0.1.0"
license      = "MIT"
authors      = ["Marco 'Capypara' Köpcke <hello@capypara.de>"]
edition      = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
ansi_term = "0.12"
which = "4"
serde_json = "1.0"
eos-rs-build = { path = "../eos-rs/build" }
